--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     <link rel="stylesheet" href="./Assets/Css/Style.css" />
     <script src="./Assets/Javascript/app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
