Header forside done

--- a/index.html
+++ b/index.html
@@ -8,8 +8,23 @@
     <script src="./Assets/Javascript/app.js" defer></script>
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <header id="landingHeader">
+    <div class="navBar">
+    <div>
+      <a href="./index.html"><img src="./Assets/Img/iconsAndLogos/logoFFT.svg" alt="Food For Thought Logo"></a>
+    </div>
+    <nav>
+      <a href="#">Chefs & Cooks <img src="./Assets/Img/iconsAndLogos/iconVectorDown.svg" alt="icon af pil ned"></a>
+      <a href="#">Recipes</a>
+      <a href="#">Food stories</a>
+      <a href="#">Kitchenware</a>
+      <a href="#" class="button">Log in <img src="./Assets/Img/iconsAndLogos/iconLoginUser.svg" alt="icon af bruger"></a>
+    </nav>
+    </div>
+    </header>
+    <main>
+      
+    </main>
     <footer></footer>
   </body>
 </html>
