--- a/index.html
+++ b/index.html
@@ -23,8 +23,108 @@
     </div>
     </header>
     <main>
+      <section class="introduction">
+        <h1>Food For Thought</h1>
+        <p>Food for Thought invites curious eaters and mindful creators to explore the stories behind food. We blend thoughtful reporting, seasonal recipes, and practical tips to help you cook better, eat with intention, and discover how food connects culture, health, and the planet. Whether you’re looking for quick inspiration, deeper context, or a new recipe to try this week, Food for Thought gives you clear, compassionate guidance that fits everyday life.</p>
+      </section>
+      <section>
+      <h2>Top recipes from Professional Chefs</h2>
+      <div class="recipes">
+      <article class="recipe">
+        <img src="./Assets/Img/recipePic/lentilCourgetteAnd.jpg" alt="Picture of Lentil, courgette and feta pasta bake" class="recipeMainPic">
+        <div class="cardInfo cardInfoTop">
+          <div>
+          <h3>Lentil, courgette and feta pasta bake</h3>
+          </div>
+          <div>
+          <a href="#" class="recipeAuthor"><div class="cardInfoImg"><img src="./Assets/Img/profilePics/rhiannonLambert.jpg" alt="Rhinannon Lambert profilbillede"></div> 
+          <h4>Rhiannon Lambert</h4></a>
+          </div>
+        </div>
+        <div class="cardInfo cardInfoBot">
+          <div>
+            <img src="./Assets/Img/iconsAndLogos/iconClock.svg" alt="Icon af et ur" class="iconImg">
+            <p>1 - 1.5 hours</p>
+          </div>
+          <div>
+          <img src="./Assets/Img/iconsAndLogos/iconUtensils.svg" alt="Icon af bestik" class="iconImg">
+          <p> 4 servings</p>
+          </div>
+        </div> 
+      </article>
+      <article class="recipe">
+        <img src="./Assets/Img/recipePic/caponata.jpg" alt="Picture of caponata" class="recipeMainPic">
+        <div class="cardInfo cardInfoTop">
+          <div>
+          <h3>Caponata</h3>
+          </div>
+          <div>
+          <a href="#" class="recipeAuthor"><div class="cardInfoImg"><img src="./Assets/Img/iconsAndLogos/iconUserProfile.svg" alt="Rhinannon Lambert profilbillede"></div> 
+          <h4>K. & G. Caldesi</h4></a>
+          </div>
+        </div>
+        <div class="cardInfo cardInfoBot">
+          <div>
+            <img src="./Assets/Img/iconsAndLogos/iconClock.svg" alt="Icon af et ur" class="iconImg">
+            <p>1 - 1.5 hours</p>
+          </div>
+          <div>
+          <img src="./Assets/Img/iconsAndLogos/iconUtensils.svg" alt="Icon af bestik" class="iconImg">
+          <p> 4 servings</p>
+          </div>
+        </div> 
+      </article>
+      <article class="recipe">
+        <img src="./Assets/Img/recipePic/lentilCourgetteAnd.jpg" alt="Picture of Lentil, courgette and feta pasta bake" class="recipeMainPic">
+        <div class="cardInfo cardInfoTop">
+          <div>
+          <h3>Lentil, courgette and feta pasta bake</h3>
+          </div>
+          <div>
+          <a href="#" class="recipeAuthor"><div class="cardInfoImg"><img src="./Assets/Img/profilePics/rhiannonLambert.jpg" alt="Rhinannon Lambert profilbillede"></div> 
+          <h4>Rhiannon Lambert</h4></a>
+          </div>
+        </div>
+        <div class="cardInfo cardInfoBot">
+          <div>
+            <img src="./Assets/Img/iconsAndLogos/iconClock.svg" alt="Icon af et ur" class="iconImg">
+            <p>1 - 1.5 hours</p>
+          </div>
+          <div>
+          <img src="./Assets/Img/iconsAndLogos/iconUtensils.svg" alt="Icon af bestik" class="iconImg">
+          <p> 4 servings</p>
+          </div>
+        </div> 
+      </article>
+      <article class="recipe">
+        <img src="./Assets/Img/recipePic/lentilCourgetteAnd.jpg" alt="Picture of Lentil, courgette and feta pasta bake" class="recipeMainPic">
+        <div class="cardInfo cardInfoTop">
+          <div>
+          <h3>Lentil, courgette and feta pasta bake</h3>
+          </div>
+          <div>
+          <a href="#" class="recipeAuthor"><div class="cardInfoImg"><img src="./Assets/Img/profilePics/rhiannonLambert.jpg" alt="Rhinannon Lambert profilbillede"></div> 
+          <h4>Rhiannon Lambert</h4></a>
+          </div>
+        </div>
+        <div class="cardInfo cardInfoBot">
+          <div>
+            <img src="./Assets/Img/iconsAndLogos/iconClock.svg" alt="Icon af et ur" class="iconImg">
+            <p>1 - 1.5 hours</p>
+          </div>
+          <div>
+          <img src="./Assets/Img/iconsAndLogos/iconUtensils.svg" alt="Icon af bestik" class="iconImg">
+          <p> 4 servings</p>
+          </div>
+        </div> 
+      </article>
+      </div>
+      </section>
+
       
     </main>
-    <footer></footer>
-  </body>
+    <footer>
+      <p>sdnfjksdfbjkhsdfhhjksdfhkjsdfhkjsdfh</p>
+    </footer>
+  </body>   
 </html>
