Food storeis section lavet og done

--- a/index.html
+++ b/index.html
@@ -52,75 +52,81 @@
           </div>
         </div> 
       </article>
-      <article class="recipe">
-        <img src="./Assets/Img/recipePic/caponata.jpg" alt="Picture of caponata" class="recipeMainPic">
-        <div class="cardInfo cardInfoTop">
-          <div>
-          <h3>Caponata</h3>
-          </div>
-          <div>
-          <a href="#" class="recipeAuthor"><div class="cardInfoImg"><img src="./Assets/Img/iconsAndLogos/iconUserProfile.svg" alt="Rhinannon Lambert profilbillede"></div> 
-          <h4>K. & G. Caldesi</h4></a>
-          </div>
-        </div>
-        <div class="cardInfo cardInfoBot">
-          <div>
-            <img src="./Assets/Img/iconsAndLogos/iconClock.svg" alt="Icon af et ur" class="iconImg">
-            <p>1 - 1.5 hours</p>
-          </div>
-          <div>
-          <img src="./Assets/Img/iconsAndLogos/iconUtensils.svg" alt="Icon af bestik" class="iconImg">
-          <p> 4 servings</p>
-          </div>
-        </div> 
-      </article>
-      <article class="recipe">
-        <img src="./Assets/Img/recipePic/lentilCourgetteAnd.jpg" alt="Picture of Lentil, courgette and feta pasta bake" class="recipeMainPic">
-        <div class="cardInfo cardInfoTop">
-          <div>
-          <h3>Lentil, courgette and feta pasta bake</h3>
-          </div>
-          <div>
-          <a href="#" class="recipeAuthor"><div class="cardInfoImg"><img src="./Assets/Img/profilePics/rhiannonLambert.jpg" alt="Rhinannon Lambert profilbillede"></div> 
-          <h4>Rhiannon Lambert</h4></a>
-          </div>
-        </div>
-        <div class="cardInfo cardInfoBot">
-          <div>
-            <img src="./Assets/Img/iconsAndLogos/iconClock.svg" alt="Icon af et ur" class="iconImg">
-            <p>1 - 1.5 hours</p>
-          </div>
-          <div>
-          <img src="./Assets/Img/iconsAndLogos/iconUtensils.svg" alt="Icon af bestik" class="iconImg">
-          <p> 4 servings</p>
-          </div>
-        </div> 
-      </article>
-      <article class="recipe">
-        <img src="./Assets/Img/recipePic/lentilCourgetteAnd.jpg" alt="Picture of Lentil, courgette and feta pasta bake" class="recipeMainPic">
-        <div class="cardInfo cardInfoTop">
-          <div>
-          <h3>Lentil, courgette and feta pasta bake</h3>
-          </div>
-          <div>
-          <a href="#" class="recipeAuthor"><div class="cardInfoImg"><img src="./Assets/Img/profilePics/rhiannonLambert.jpg" alt="Rhinannon Lambert profilbillede"></div> 
-          <h4>Rhiannon Lambert</h4></a>
-          </div>
-        </div>
-        <div class="cardInfo cardInfoBot">
-          <div>
-            <img src="./Assets/Img/iconsAndLogos/iconClock.svg" alt="Icon af et ur" class="iconImg">
-            <p>1 - 1.5 hours</p>
-          </div>
-          <div>
-          <img src="./Assets/Img/iconsAndLogos/iconUtensils.svg" alt="Icon af bestik" class="iconImg">
-          <p> 4 servings</p>
-          </div>
-        </div> 
-      </article>
       </div>
       </section>
-
+      <section>
+        <h2>Top food stories of the week</h2>
+        <div class="foodStories">
+        <a href="#" class="foodStory card ">
+          <img src="./Assets/Img/foodStories/benefitsOfPlantBased.jpg" alt="">
+          <div class="foodStoryInfo">
+            <h3>Are there immunity benefits from eating a plant-based diet?</h3>
+            <p>Could following a plant-based diet improve your health or is it not that simple? Here's what experts say…</p>
+            <div class="cardInfo cardInfoBot">
+          <div>
+            <img src="./Assets/Img/iconsAndLogos/iconUserProfile.svg" alt="Icon af et bruger" class="iconImg">
+            <p>Unknown</p>
+          </div>
+          <div>
+          <img src="./Assets/Img/iconsAndLogos/iconCalender.svg" alt="Icon af bestik" class="iconImg">
+          <p>September 2025</p>
+          </div>
+        </div>
+          </div>
+        </a>
+        <a href="#" class="foodStory card ">
+          <img src="./Assets/Img/foodStories/popularPickles.jpg" alt="billede af pickles">
+          <div class="foodStoryInfo">
+            <h3>Why are pickles suddenly so popular?</h3>
+            <p>Once an oft-removed burger garnish, pickles have exploded in popularity lately. Here’s why we can’t get enough of them</p>
+            <div class="cardInfo">
+          <div>
+            <img src="./Assets/Img/iconsAndLogos/iconUserProfile.svg" alt="Icon af et bruger" class="iconImg">
+            <p>Imran Rahman-Jones</p>
+          </div>
+          <div>
+          <img src="./Assets/Img/iconsAndLogos/iconCalender.svg" alt="Icon af bestik" class="iconImg">
+          <p>September 2025</p>
+          </div>
+        </div>
+          </div>
+        </a>
+        <a href="#" class="foodStory card ">
+          <img src="./Assets/Img/foodStories/greenHerbs.jpg" alt="">
+          <div class="foodStoryInfo">
+            <h3>The green and easy way to liven up basic recipes</h3>
+            <p>Whether you buy them fresh, dried or grow your own, herbs are great-value ingredients that can transform the simplest of dishes…</p>
+            <div class="cardInfo">
+          <div>
+            <img src="./Assets/Img/profilePics/sueQuinn.jpg" alt="Icon af et bruger" class="profilePicture">
+            <p>Sue Quinn</p>
+          </div>
+          <div>
+          <img src="./Assets/Img/iconsAndLogos/iconCalender.svg" alt="Icon af bestik" class="iconImg">
+          <p>September 2025</p>
+          </div>
+        </div>
+          </div>
+        </a>
+        <a href="#" class="foodStory card ">
+          <img src="./Assets/Img/foodStories/plantBasedProtein.jpg" alt="">
+          <div class="foodStoryInfo">
+            <h3>How easy is it to get enough protein if you follow a plant-based or vegetarian diet?</h3>
+            <p>I thought my veggie diet was pretty healthy, but all the talk about protein made me wonder if I was getting enough. I decided to put it to the test…</p>
+            <div class="cardInfo">
+          <div>
+            <img src="./Assets/Img/iconsAndLogos/iconUserProfile.svg" alt="Icon af et bruger" class="iconImg">
+            <p>Izzie Cox</p>
+          </div>
+          <div>
+          <img src="./Assets/Img/iconsAndLogos/iconCalender.svg" alt="Icon af bestik" class="iconImg">
+          <p>September 2025</p>
+          </div>
+        </div>
+          </div>
+        </a>
+        </div>
+      </section>
       
     </main>
     <footer>
