--- a/index.html
+++ b/index.html
@@ -129,8 +129,12 @@
       </section>
       
     </main>
+    
     <footer>
-      <p>sdnfjksdfbjkhsdfhhjksdfhkjsdfhkjsdfh</p>
-    </footer>
+      <a href="#">Contact</a>
+      <a href="#">Cookies & privacy policy</a>
+      <a href="#">Copyright</a>
+      <a href="#">Madeupstreet 87, Madeupland</a>
+  </footer>
   </body>   
 </html>
