--- a/recipe.html
+++ b/recipe.html
@@ -55,6 +55,31 @@
         <h2>Michael Caines</h2>
     </div>
 </section>
+
+<section class="recipeCardSection">
+    <article class="recipeCard">
+     
+        <img src="./Assets/Img/curriedCarrotSoup/sweetPotatoSoup.jpg" alt="Picture of sweet potato and carrot soup" id="recipeImage">
+        <!--Titel på opskrift, men i ahref da det er et link -->
+
+        <div id="recipeNameAndAuthor">
+            <h3>Potato and carrot soup</h3> 
+            <img src="./Assets/Img/profilePics/justinePattison.jpg" alt="Picture of Justine Pattison" id="recipeAuthorImg"> 
+            <p>Justine Pattison</p>
+        </div>
+
+        <div id="recipeMetadata">
+            <div id="recipeTime">
+              <img src="./Assets/Img/iconsAndLogos/iconClock.svg" alt="Clock icon">
+                <p>2 hours</p>
+            </div>
+            <div id="recipeServing">
+                <img src="./Assets/Img/iconsAndLogos/iconUtensils.svg" alt="utensil icon">
+                <p>6 servings</p>
+            </div>
+        </div>
+    </article>
+</section>
     </main>
 
 
