lavet rick og rettet på recipe

--- a/index.html
+++ b/index.html
@@ -27,10 +27,157 @@
         <h1>Food For Thought</h1>
         <p>Food for Thought invites curious eaters and mindful creators to explore the stories behind food. We blend thoughtful reporting, seasonal recipes, and practical tips to help you cook better, eat with intention, and discover how food connects culture, health, and the planet. Whether you’re looking for quick inspiration, deeper context, or a new recipe to try this week, Food for Thought gives you clear, compassionate guidance that fits everyday life.</p>
       </section>
-      <section>
       <h2>Top recipes from Professional Chefs</h2>
+      <section class="recipeCardSection">
+      <article class="recipeCard">
+        <img src="./Assets/Img/recipePic/lentilCourgetteAnd.jpg" alt="Picture of Lentil pasta bake" id="recipeImage">
+        <div id="recipeNameAndAuthor">
+            <a href=""><h3>Lentil, courgette and feta pasta bake</h3></a> 
+            <img src="./Assets/Img/profilePics/rhiannonLambert.jpg" alt="Picture of rhiannon lambert" id="recipeAuthorImg"> 
+            <a href=""><p>Rhiannon Lambert</p></a>
+        </div>
+        <div id="recipeMetadata">
+            <div id="recipeTime">
+              <img src="./Assets/Img/iconsAndLogos/iconClock.svg" alt="Clock icon">
+                <p>1 - 1.5 hours</p>
+            </div>
+            <div id="recipeServing">
+                <img src="./Assets/Img/iconsAndLogos/iconUtensils.svg" alt="utensil icon">
+                <p>4 servings</p>
+            </div>
+        </div>
+    </article>
+    <article class="recipeCard">
+        <img src="./Assets/Img/recipePic/caponata.jpg" alt="Picture of caponata" id="recipeImage">
+        <div id="recipeNameAndAuthor">
+           <a href=""><h3>Caponata</h3> </a> 
+            <img src="./Assets/Img/iconsAndLogos/iconUserProfile.svg" alt="User profile picture" id="recipeAuthorImg"> 
+            <a href=""><p>Katie and Giancarlo Caldesi</p></a>
+        </div>
+        <div id="recipeMetadata">
+            <div id="recipeTime">
+              <img src="./Assets/Img/iconsAndLogos/iconClock.svg" alt="Clock icon">
+                <p>1 - 2 hours</p>
+            </div>
+            <div id="recipeServing">
+                <img src="./Assets/Img/iconsAndLogos/iconUtensils.svg" alt="utensil icon">
+                <p>4 servings</p>
+            </div>
+        </div>
+    </article>
+    <article class="recipeCard">
      
-      </section>
+        <img src="./Assets/Img/recipePic/chargrilledBroccoli.jpg" alt="Picture of chargrilledBroccoli" id="recipeImage">
+        <div id="recipeNameAndAuthor">
+           <a href=""><h3>Chargrilled brocolli pasta with chili and garlic</h3> </a> 
+            <img src="./Assets/Img/iconsAndLogos/iconUserProfile.svg" alt="User profile picture" id="recipeAuthorImg"> 
+           <a href=""><p>Rebecca Sargent</p></a> 
+        </div>
+        <div id="recipeMetadata">
+            <div id="recipeTime">
+              <img src="./Assets/Img/iconsAndLogos/iconClock.svg" alt="Clock icon">
+                <p>40 mins</p>
+            </div>
+            <div id="recipeServing">
+                <img src="./Assets/Img/iconsAndLogos/iconUtensils.svg" alt="utensil icon">
+                <p>1 servings</p>
+            </div>
+        </div>
+    </article>
+    <article class="recipeCard">
+        <img src="./Assets/Img/rickSteinRecipes/pastaWithAlmondBasil.jpg" alt="Picture of pastaWithAlmondBasil" id="recipeImage">
+        <div id="recipeNameAndAuthor">
+            <a href=""><h3>Pasta with almond, basil and pecorino pesto</h3> </a>
+            <img src="./Assets/Img/profilePics/rickStein.jpg" alt="Picture of Rick Stein" id="recipeAuthorImg"> 
+            <a href="./author.html"><p>Rick Stein</p></a>
+        </div>
+        <div id="recipeMetadata">
+            <div id="recipeTime">
+              <img src="./Assets/Img/iconsAndLogos/iconClock.svg" alt="Clock icon">
+                <p>40 mins</p>
+            </div>
+            <div id="recipeServing">
+                <img src="./Assets/Img/iconsAndLogos/iconUtensils.svg" alt="utensil icon">
+                <p>6 servings</p>
+            </div>
+        </div>
+    </article>
+</section>
+<h2>Top recipes from Amateur Cooks</h2>
+      <section class="recipeCardSection">
+      <article class="recipeCard">
+        <img src="./Assets/Img/recipePic/pavBhaji.jpg" alt="Picture of pavBhaji" id="recipeImage">
+        <div id="recipeNameAndAuthor">
+            <a href=""><h3>Pav bhaji</h3></a> 
+            <img src="./Assets/Img/profilePics/romyGill.jpg" alt="Picture of romyGill" id="recipeAuthorImg"> 
+            <a href=""><p>Romy Gill</p></a>
+        </div>
+        <div id="recipeMetadata">
+            <div id="recipeTime">
+              <img src="./Assets/Img/iconsAndLogos/iconClock.svg" alt="Clock icon">
+                <p>1 hours</p>
+            </div>
+            <div id="recipeServing">
+                <img src="./Assets/Img/iconsAndLogos/iconUtensils.svg" alt="utensil icon">
+                <p>4 - 5 servings</p>
+            </div>
+        </div>
+    </article>
+    <article class="recipeCard">
+        <img src="./Assets/Img/recipePic/curryPumpkin.jpg" alt="Picture of curryPumpkin" id="recipeImage">
+        <div id="recipeNameAndAuthor">
+           <a href=""><h3>Curry pumpkin with “buss up shut” (paratha roti)</h3> </a> 
+            <img src="./Assets/Img/profilePics/shiviRamoutar.jpg" alt="User profile picture" id="recipeAuthorImg"> 
+            <a href=""><p>Shivi Ramoutar</p></a>
+        </div>
+        <div id="recipeMetadata">
+            <div id="recipeTime">
+              <img src="./Assets/Img/iconsAndLogos/iconClock.svg" alt="Clock icon">
+                <p>3 - 4 hours</p>
+            </div>
+            <div id="recipeServing">
+                <img src="./Assets/Img/iconsAndLogos/iconUtensils.svg" alt="utensil icon">
+                <p>4 servings</p>
+            </div>
+        </div>
+    </article>
+    <article class="recipeCard">
+        <img src="./Assets/Img/recipePic/chilliCheeseToast.jpg" alt="Picture of Chilli cheese toast" id="recipeImage">
+        <div id="recipeNameAndAuthor">
+           <a href=""><h3>Chilli cheese toast</h3> </a> 
+            <img src="./Assets/Img/profilePics/cyrusTodiwala.jpg" alt="User profile picture" id="recipeAuthorImg"> 
+           <a href=""><p>Cyrus Todiwala</p></a> 
+        </div>
+        <div id="recipeMetadata">
+            <div id="recipeTime">
+              <img src="./Assets/Img/iconsAndLogos/iconClock.svg" alt="Clock icon">
+                <p>40 mins</p>
+            </div>
+            <div id="recipeServing">
+                <img src="./Assets/Img/iconsAndLogos/iconUtensils.svg" alt="utensil icon">
+                <p>6 - 8 slices</p>
+            </div>
+        </div>
+    </article>
+    <article class="recipeCard">
+        <img src="./Assets/Img/curriedCarrotSoup/curriedCarrotSoup.jpg" alt="Picture of Curried carrot soup" id="recipeImage">
+        <div id="recipeNameAndAuthor">
+            <a href=""><h3>Curried carrot soup</h3> </a>
+            <img src="./Assets/Img/profilePics/michaelCaines.jpg" alt="Picture of Michael Caines" id="recipeAuthorImg"> 
+            <a href="./author.html"><p>Michael Caines</p></a>
+        </div>
+        <div id="recipeMetadata">
+            <div id="recipeTime">
+              <img src="./Assets/Img/iconsAndLogos/iconClock.svg" alt="Clock icon">
+                <p>1 hour</p>
+            </div>
+            <div id="recipeServing">
+                <img src="./Assets/Img/iconsAndLogos/iconUtensils.svg" alt="utensil icon">
+                <p>6 servings</p>
+            </div>
+        </div>
+    </article>
+</section>
       <section>
         <h2>Top food stories of the week</h2>
         <div class="foodStories">
