rettet småfejl rundt omkring now done

--- a/recipe.html
+++ b/recipe.html
@@ -10,17 +10,17 @@
 <body>
     <header id="recipeHeader">
         <div class="navBar">
-        <div>
-          <a href="./index.html"><img src="./Assets/Img/iconsAndLogos/logoFFT.svg" alt="Food For Thought Logo"></a>
-        </div>
-        <nav>
-          <a href="#">Chefs & Cooks <img src="./Assets/Img/iconsAndLogos/iconVectorDown.svg" alt="icon af pil ned"></a>
-          <a href="#">Recipes</a>
-          <a href="#">Food stories</a>
-          <a href="#">Kitchenware</a>
-          <a href="#" class="button">Log in <img src="./Assets/Img/iconsAndLogos/iconLoginUser.svg" alt="icon af bruger"></a>
-        </nav>
-        </div>
+    <div>
+      <a href="./index.html"><img src="./Assets/Img/iconsAndLogos/logoFFT.svg" alt="Food For Thought Logo"></a>
+    </div>
+    <nav>
+      <a href="./author.html">Chefs & Cooks <img src="./Assets/Img/iconsAndLogos/iconVectorDown.svg" alt="icon af pil ned"></a>
+      <a href="./recipe.html">Recipes</a>
+      <a href="#">Food stories</a>
+      <a href="#">Kitchenware</a>
+      <a href="#" class="button">Log in <img src="./Assets/Img/iconsAndLogos/iconLoginUser.svg" alt="icon af bruger"></a>
+    </nav>
+    </div>
     </header>
 
     <main id="recipeMain">
@@ -56,6 +56,18 @@
     </div>
 </section>
 
+<section class="timeAndServings">
+    <div class="largerIcons">
+        <img src="./Assets/Img/iconsAndLogos/iconClock.svg" alt="picture of cloc">
+        <h2>1 hour</h2>
+    </div>
+
+    <div class="largerIcons">
+        <img src="./Assets/Img/iconsAndLogos/iconUtensils.svg" alt="picture of utensils">
+        <h2>6 servings</h2>
+    </div>
+</section>
+
 <section class="procedureSection">
     <article class="procedure">
 <div>
@@ -88,8 +100,15 @@
     </ol>
 </div>
 </article>
-<article>
-
+<article class="likeAndShare">
+<div>
+<img src="./Assets/Img/iconsAndLogos/iconThumbsUpFilled.svg" alt="picture of thumbs up">
+<p>Like recipe</p>
+</div>
+<div>
+<img src="./Assets/Img/iconsAndLogos/iconShare.svg" alt="picture of thumbs up">
+<p>Share recipe</p>
+</div>
 </article>
 </section>
 
@@ -337,6 +356,91 @@
         </div>
     </article>
 </section>
+<h2>Recipe reviews</h2>
+<section class="ratingCardSection">
+    <article class="ratingCard">
+    <h3>Easy and delicious</h3>
+    <div class="ratingAndDate">
+    <div class="starWrap">
+        <img src="./Assets/Img/iconsAndLogos/iconStar.svg" alt="icon of star">
+        <img src="./Assets/Img/iconsAndLogos/iconStar.svg" alt="icon of star">
+        <img src="./Assets/Img/iconsAndLogos/iconStar.svg" alt="icon of star">
+    </div>
+    <div class="ratingDate">
+        <img src="./Assets/Img/iconsAndLogos/iconCalender.svg" alt="icon of iconCalender">
+        <p>September2025</p>
+    </div>
+    </div>
+    <p>Easy and delicious recipe for when you have your in-laws visiting. They all loved it and I wish there was more left over. Unfortunately I can only give the recipe 3 stars as I am now tired of there being no more soup.</p>
+<div class="ratingUser">
+    <img src="./Assets/Img/iconsAndLogos/iconUserProfile.svg" alt="user profile icon">
+    <p>Ulla Jensen</p>
+</div>    
+</article>
+<article class="ratingCard">
+    <h3>Almost like grandma made it!</h3>
+    <div class="ratingAndDate">
+    <div class="starWrap">
+        <img src="./Assets/Img/iconsAndLogos/iconStar.svg" alt="icon of star">
+        <img src="./Assets/Img/iconsAndLogos/iconStar.svg" alt="icon of star">
+        <img src="./Assets/Img/iconsAndLogos/iconStar.svg" alt="icon of star">
+        <img src="./Assets/Img/iconsAndLogos/iconStar.svg" alt="icon of star">
+    </div>
+    <div class="ratingDate">
+        <img src="./Assets/Img/iconsAndLogos/iconCalender.svg" alt="icon of iconCalender">
+        <p>September2025</p>
+    </div>
+    </div>
+    <p>This recipe is so amazing that it took me back to when I was a little kid. My grandma often made a similar soup that I just can't get out of my head. However, nothing is as good as when grandma made it and that's why only 4 stars.</p>
+<div class="ratingUser">
+    <img src="./Assets/Img/iconsAndLogos/iconUserProfile.svg" alt="user profile icon">
+    <p>Simon Larsson</p>
+</div>    
+</article>
+<article class="ratingCard">
+    <h3>WHERE IS THE MEAT</h3>
+    <div class="ratingAndDate">
+    <div class="starWrap">
+        <img src="./Assets/Img/iconsAndLogos/iconStar.svg" alt="icon of star">
+        <img src="./Assets/Img/iconsAndLogos/iconStar.svg" alt="icon of star">
+    </div>
+    <div class="ratingDate">
+        <img src="./Assets/Img/iconsAndLogos/iconCalender.svg" alt="icon of iconCalender">
+        <p>September2025</p>
+    </div>
+    </div>
+    <p>WHAT'S GOING ON HERE, WHERE'S THE MEAT, WHAT'S THE POINT! WHAT'S THE POINT? WHAT'S THERE TO OFFERING TO OTHERS THESE DAYS, MEAT-FREE MEAT DISHES, IS TOTALLY OUT OF THE WAY AND I CAN'T STAND WITH THAT</p>
+<div class="ratingUser">
+    <img src="./Assets/Img/iconsAndLogos/iconUserProfile.svg" alt="user profile icon">
+    <p>Brian Chaddy</p>
+</div>    
+</article>
+</section>
+<div class="buttonWrapper">
+<a href="#" class="button">More reviews on this recipe</a>
+</div>
+<h2>Kitchenware recomended by Rick Stein</h2>
+<section class="kitchenware">
+  <article class="kitchenwareItem">
+    <img src="./Assets/Img/productRecomendations/pot.jpg" alt="pot">
+    <h3>Pot by Pot it up</h3>
+  </article>
+  <article class="kitchenwareItem">
+    <img src="./Assets/Img/productRecomendations/pan.jpg" alt="Pan by PANdas">
+    <h3>Pan by PANdas</h3>
+  </article>
+  <article class="kitchenwareItem">
+    <img src="./Assets/Img/productRecomendations/stickBlender.jpg" alt="Stick blender by Cut it">
+    <h3>Stick blender by Cut it</h3>
+  </article>
+  <article class="kitchenwareItem">
+    <img src="./Assets/Img/productRecomendations/sieve.jpg" alt="Sieve by How to strain your dragon">
+    <h3>Sieve by How to strain your dragon</h3>
+  </article>
+</section>
+<div class="buttonWrapper">
+<a href="#" class="button">Find more  popular kitchenware</a>
+</div>
     </main>
     <footer>
             <a href="#">Contact</a>
