--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <a href="./index.html"><img src="./Assets/Img/iconsAndLogos/logoFFT.svg" alt="Food For Thought Logo"></a>
     </div>
     <nav>
-      <a href="#">Chefs & Cooks <img src="./Assets/Img/iconsAndLogos/iconVectorDown.svg" alt="icon af pil ned"></a>
-      <a href="#">Recipes</a>
+      <a href="./author.html">Chefs & Cooks <img src="./Assets/Img/iconsAndLogos/iconVectorDown.svg" alt="icon af pil ned"></a>
+      <a href="./recipe.html">Recipes</a>
       <a href="#">Food stories</a>
       <a href="#">Kitchenware</a>
       <a href="#" class="button">Log in <img src="./Assets/Img/iconsAndLogos/iconLoginUser.svg" alt="icon af bruger"></a>
